--- a/CostaAzul/components/header/header.html
+++ b/CostaAzul/components/header/header.html
@@ -6,8 +6,8 @@
 
       <div class="hero-content text-center text-neutral-content">
         <div class="max-w-md">
-          <h1 class="mb-5 font-bold md:text-9xl text-4xl">G E N E</h1>
-          <h3 class="mb-5 md:text-4xl text-2xl">ESTUDIO INTEGRAL</h3>
+          <h1 class="mb-5 font-bold md:text-9xl text-4xl">Costa Azul</h1>
+          <h3 class="mb-5 md:text-4xl text-2xl">Electricidad</h3>
           <a class="btn btn-primary px-20" href="#contacto">Contactanos</a>
         </div>
       </div>
