--- a/CostaAzul/components/navbar/navbar.html
+++ b/CostaAzul/components/navbar/navbar.html
@@ -16,16 +16,16 @@
           <ul tabindex="0" class="menu menu-sm dropdown-content z-[40] p-2 shadow bg-base-100 rounded-box absolute top-full right-2
                 w-auto min-w-min max-w-screen-lg 
                 ">
-                <li><a href="base-path/#nosotros">SOBRE NOSOTROS</a></li>
-                <li><a href="base-path/#services">SERVICIOS</a></li>
-                <li><a href="base-path/#contacto">CONTÁCTANOS</a></li>                
+                <li><a href="base-path/#nosotros">INICIO</a></li>
+                <li><a href="base-path/#services">PRODUCTOS</a></li>
+                <li><a href="base-path/#contacto">NOSOTROS</a></li>                
           </ul>
         </div>
       </div>
     </div>
 
   </div>
-
+<!--COMPUTADORA-->
   <div class="hidden md:grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 justify-items-center">
     <div class="navbar absolute top-0 left-0 right-0 z-50 {bgColor}">
       <div class="flex-1">
@@ -33,9 +33,9 @@
       </div>
       <div class="flex-none text-white">
         <ul class="menu menu-horizontal px-1">
-          <li><a class="btn btn-ghost hover:border-gray-500 hover:bg-gray-500" href="base-path/#nosotros">SOBRE NOSTROS</a></li>
-          <li><a class="btn btn-ghost hover:border-gray-500 hover:bg-gray-500" href="base-path/#services">SERVICIOS</a></li>
-          <li><a class="btn btn-ghost hover:border-gray-500 hover:bg-gray-500" href="base-path/#contacto">CONTÁCTANOS</a></li>
+          <li><a class="btn btn-ghost hover:border-gray-500 hover:bg-gray-500" href="base-path/#nosotros">INICIO</a></li>
+          <li><a class="btn btn-ghost hover:border-gray-500 hover:bg-gray-500" href="base-path/#services">PRODUCTOS</a></li>
+          <li><a class="btn btn-ghost hover:border-gray-500 hover:bg-gray-500" href="base-path/#contacto">NOSOTROS</a></li>
       </div>
     </div>
   </div>
