--- a/CostaAzul/components/contactanos/contactanos.html
+++ b/CostaAzul/components/contactanos/contactanos.html
@@ -53,7 +53,7 @@
       </div>
     </div>
   </div>
-
+<!-- computadora -->
   <div class="md:hidden h-auto">
     <div class="hero min-h-full h-full bg-gray-900">
       <div class="container mx-auto">
